--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -54,9 +54,9 @@ development:
   # Reference: https://webpack.js.org/configuration/dev-server/
   dev_server:
     https: false
-    host: localhost
+    host: webpack-dev-server
     port: 3035
-    public: localhost:3035
+    public: webpack-dev-server:3035
     hmr: false
     # Inline should be set to true if using HMR
     inline: true
