--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,11 @@ services:
 
   redis:
     image: redis
+    command: redis-server --appendonly yes
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis:/var/lib/redis/data
 
   database:
     image: postgres
@@ -30,6 +35,20 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data 
 
+  sidekiq:
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/usr/src/app
+      - gem_cache:/gems
+    depends_on:
+      - database
+      - redis
+    env_file:
+      - .env/development/database
+      - .env/development/web
+
 volumes:
   db_data:
   gem_cache:
+  redis:
